[package]
name = "aes"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { features = ["shortint", "integer", "experimental", "noise-asserts", "gpu"] }
rand = "0.8"
aes = "0.8.4"
rayon = "1.7"
clap = { version = "4.5.28", features = ["derive"] }
dyn-stack = "0.11.0"
aligned-vec = "0.6.1"
tfhe-fft = "0.7.0"
