[package]
name = "aes"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { path = "./tfhe-rs/tfhe", features = ["shortint", "integer", "experimental", "noise-asserts", "gpu"] }
rand = "0.8"
aes = "0.8.4"
rayon = "1.7"
clap = { version = "4.5.28", features = ["derive"] }
dyn-stack = { version = "0.11", default-features = false }
aligned-vec = { version = "0.6", default-features = false }
tfhe-fft = {path = "./tfhe-rs/tfhe-fft"}

[profile.release]
incremental = true